# GDScript-formatter

./: CHANGELOG.md  Cargo.toml  README.md
addons/GDQuest_GDScript_formatter/: install_and_update.gd  menu.gd  plugin.cfg  plugin.gd
src/: cli.rs  lib.rs  main.rs  verify_structure.rs
